ver.3.4.0 ocr 처리 완료

--- a/app/src/main/res/layout/activity_ocr.xml
+++ b/app/src/main/res/layout/activity_ocr.xml
@@ -36,8 +36,7 @@
         android:id="@+id/OCRTextView"
         android:layout_width="406dp"
         android:layout_height="425dp"
-        android:text="text here"
-        android:textColor="#5E1A3C6E"
+        android:hint="text here"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
