ver.3.4.5 여러 줄 사진 찍어서 출력(정리) To do : tts 작업 시작

--- a/app/src/main/res/layout/activity_ocr.xml
+++ b/app/src/main/res/layout/activity_ocr.xml
@@ -34,23 +34,47 @@
 
     <TextView
         android:id="@+id/OCRTextView"
-        android:layout_width="317dp"
-        android:layout_height="297dp"
+        android:layout_width="348dp"
+        android:layout_height="160dp"
         android:hint="text here"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.476"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/OCRButton"
-        app:layout_constraintVertical_bias="0.275" />
+        app:layout_constraintVertical_bias="0.0" />
 
-    <Button
-        android:id="@+id/test"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Button"
+    <TextView
+        android:id="@+id/summarizeTextView"
+        android:layout_width="350dp"
+        android:layout_height="165dp"
+        android:hint="text here"
+        android:background="#84C3C3"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.524"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/OCRButton"
+        app:layout_constraintVertical_bias="0.76" />
+
+    <Button
+        android:id="@+id/summarizeButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="요약"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.207"
+        app:layout_constraintStart_toStartOf="parent"
+        tools:ignore="MissingConstraints" />
+
+    <Button
+        android:id="@+id/soundButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="읽기"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.777"
         app:layout_constraintStart_toStartOf="parent"
         tools:ignore="MissingConstraints" />
 
