--- a/app/src/main/res/layout/activity_test.xml
+++ b/app/src/main/res/layout/activity_test.xml
@@ -7,23 +7,39 @@
     tools:context=".test"
     tools:ignore="ExtraText">
 
-   <ImageView
-       android:id="@+id/imageView6"
-       android:layout_width="194dp"
-       android:layout_height="145dp"
-       android:src="@drawable/a8"
-       tools:ignore="MissingConstraints"
-       tools:layout_editor_absoluteX="6dp"
-       tools:layout_editor_absoluteY="53dp" />
 
-   <ImageView
-       android:id="@+id/imageView3"
-       android:layout_width="194dp"
-       android:layout_height="145dp"
-       android:src="@drawable/a8"
-       tools:ignore="MissingConstraints"
-       tools:layout_editor_absoluteX="213dp"
-       tools:layout_editor_absoluteY="53dp" />
+   <Button
+       android:id="@+id/btn_stt_start"
+       android:layout_width="wrap_content"
+       android:layout_height="wrap_content"
+       android:layout_marginBottom="588dp"
+       android:text="Button"
+       app:layout_constraintBottom_toBottomOf="parent"
+       app:layout_constraintEnd_toEndOf="parent"
+       app:layout_constraintHorizontal_bias="0.025"
+       app:layout_constraintStart_toStartOf="parent" />
+
+   <EditText
+       android:id="@+id/txtInMsg"
+       android:layout_width="345dp"
+       android:layout_height="201dp"
+       android:layout_marginTop="40dp"
+       android:ems="10"
+       android:inputType="textPersonName"
+       app:layout_constraintEnd_toEndOf="parent"
+       app:layout_constraintHorizontal_bias="0.466"
+       app:layout_constraintStart_toStartOf="parent"
+       app:layout_constraintTop_toBottomOf="@+id/btn_stt_start" />
+
+   <EditText
+       android:id="@+id/txtSystem"
+       android:layout_width="345dp"
+       android:layout_height="252dp"
+       android:ems="10"
+       android:inputType="textPersonName"
+       app:layout_constraintEnd_toEndOf="parent"
+       app:layout_constraintStart_toStartOf="parent"
+       app:layout_constraintTop_toBottomOf="@+id/txtInMsg" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
