--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,9 +1,14 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
     <style name="Base.Theme.MyApplication" parent="Theme.Material3.DayNight.NoActionBar">
-        <!-- Customize your light theme here. -->
-        <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
+        <!-- Make the status bar transparent -->
+        <item name="android:statusBarColor">@android:color/transparent</item>
+
+        <!-- Set the light status bar icons (battery, time, etc.) -->
+        <item name="android:windowLightStatusBar">true</item>
     </style>
+
+
 
     <style name="Theme.MyApplication" parent="Base.Theme.MyApplication" />
 </resources>
